fix word wrap css

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ h1 {
   display: flex;
   flex-direction: column;
   text-align: center;
+  overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    white-space: normal !important;
 }
 
 .second-section-not-found {
